# HW_WEB_09

./: pyproject.toml
HW_WEB_08_and_09/: config.ini  main.py  models.py  scrapping.py  seeds.py
